Se le quito el auto completado de input range

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  		    <br>
 	  		  
 	    <label style="margin-top:30px; display: block;">Cantidad de letras : <b id="rangeP">0</b></label>
-	    <input type="range" min="4" max="64" id="rangeInput" style="width:50%;" name="">
+	    <input type="range" min="4" max="64" id="rangeInput" autocomplete="off" value="0" style="width:50%;" name="">
 	    <br>
 	    <button class="buttonGuardar" id="aplicarCambios">Aplicar</button>
 <br><br>
