--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="icon" href="media/icono.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>D/code | passwordBot</title>
 </head>
