--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	 </div>
 
 	 <div class="contentGenratorValue" id="contentValue">
-	 	<p id="pAlert" style=" width: auto;">Hola, Primero has la configuracion despues guardas</p>
+	 	<p id="pAlert" style=" width: auto;">Hola, Primero has la configuracion despues aplica los cambios</p>
 	 	   <input type="hidden" value="" placeholder="Ingresa el texto que desea incluir">
 <button id="buttonCopiar" style="display: none;">copiar <i class="fa-sharp fa-solid fa-copy"></i></button><p id="pCopiar"></p>
 	 	   <div id="itemPassword" style="display: none;"><p id="resultado"></p></div>
