Mejoras de diseno en buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 	 <div class="contentGenratorValue" id="contentValue">
 	 	<p id="pAlert" style=" width: auto;">Hola, Primero has la configuracion despues aplica los cambios</p>
 	 	   <input type="hidden" value="" placeholder="Ingresa el texto que desea incluir">
-<button id="buttonCopiar" style="display: none;">copiar <i class="fa-sharp fa-solid fa-copy"></i></button><p id="pCopiar"></p>
+<div class="containerOfButton"><button class="buttons" id="buttonCopiar" style="display: none;">copiar  <i class="fa-sharp fa-solid fa-copy"></i></button><p id="pCopiar"></p>
+	<button class="buttons" id="guardar">Guardar <i class="fa-solid fa-file-arrow-up"></i></button>
+	<button class="buttons" id="regenerar">Regenerar <i class="fa-solid fa-rotate"></i></i></button></div>
 	 	   <div id="itemPassword" style="display: none;"><p id="resultado"></p></div>
 	 </div>
 	  </div>
