ya se puede guardar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		   	     
 	  <div class="contentFor" id="contentGenrator" >
-		<div id="sobrePoner" style="display: none;"></div>
+		<div id="sobrePoner" style="display: block;"></div>
 	<button id="buttonMenuKey"><img src="media/icons/passwordKey.png" alt=""></button>
 
 	  	<div class="config" id="configID">  
@@ -53,9 +53,75 @@
 	 </div>
 
 	 <!-- ////////////////////////////////////////////////// container key -->
-                <div id="containerKeys" style="display: none;">
+                <div id="containerKeys" style="display: block;">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
-<div id="noKeys"><img id="noneKeyGif" src="media/errorAnimation.gif" alt=""><p id="alertNoKeys">Ups, no has registrado ninguna contraseña</p></div>
+<div id="noKeys" style="display: none;"><img id="noneKeyGif" src="media/errorAnimation.gif" alt=""><p id="alertNoKeys">Ups, no has registrado ninguna contraseña</p></div>
+<div id="pushContainer">
+	<div class="push">
+		<label>Commit</label>
+			<p class="commitPush">Google</p>
+		<label>contraseña</label>
+				<p class="passwordPush">4fwafsssssssssssssssssssssssssssssssssssssssf65s4f6</p>
+		<label>Fecha</label>
+				<p class="fechaPush">10/01/23</p>
+		</div>	<div class="push">
+			<label>Commit</label>
+				<p class="commitPush">Google</p>
+			<label>contraseña</label>
+					<p class="passwordPush">s</p>
+			<label>Fecha</label>
+					<p class="fechaPush">10/01/23</p>
+			</div>	<div class="push">
+				<label>Commit</label>
+					<p class="commitPush">Google</p>
+				<label>contraseña</label>
+						<p class="passwordPush">4fwafsdfsfsfdsff65s4f6</p>
+				<label>Fecha</label>
+						<p class="fechaPush">10/01/23</p>
+				</div>	<div class="push">
+					<label>Commit</label>
+						<p class="commitPush">Google</p>
+					<label>contraseña</label>
+							<p class="passwordPush">dddddd</p>
+					<label>Fecha</label>
+							<p class="fechaPush">10/01/23</p>
+					</div>	<div class="push">
+						<label>Commit</label>
+							<p class="commitPush">Google</p>
+						<label>contraseña</label>
+								<p class="passwordPush">4fwaff65s4f6</p>
+						<label>Fecha</label>
+								<p class="fechaPush">10/01/23</p>
+						</div>	<div class="push">
+							<label>Commit</label>
+								<p class="commitPush">Google</p>
+							<label>contraseña</label>
+									<p class="passwordPush">safafafa</p>
+							<label>Fecha</label>
+									<p class="fechaPush">10/01/23</p>
+							</div>	<div class="push">
+								<label>Commit</label>
+									<p class="commitPush">Google</p>
+								<label>contraseña</label>
+										<p class="passwordPush">gsgsgsdgsdg</p>
+								<label>Fecha</label>
+										<p class="fechaPush">10/01/23</p>
+								</div>	<div class="push">
+									<label>Commit</label>
+										<p class="commitPush">Google</p>
+									<label>contraseña</label>
+											<p class="passwordPush">afaffasfewfewfwe</p>
+									<label>Fecha</label>
+											<p class="fechaPush">10/01/23</p>
+									</div>	<div class="push">
+										<label>Commit</label>
+											<p class="commitPush">Google</p>
+										<label>contraseña</label>
+												<p class="passwordPush">afasfeew</p>
+										<label>Fecha</label>
+												<p class="fechaPush">10/01/23</p>
+										</div>
+</div>
 				</div>
 	<!-- /////////////////////////////  container save key -->
 	<div id="containerSave" style="display: none;">
