Mejoras en el diseno

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		   	     
 	  <div class="contentFor" id="contentGenrator" >
-		<div id="sobrePoner" style="display: block;"></div>
+		<div id="sobrePoner" style="display: none;"></div>
 	<button id="buttonMenuKey"><img src="media/icons/passwordKey.png" alt=""></button>
 
 	  	<div class="config" id="configID">  
@@ -53,75 +53,10 @@
 	 </div>
 
 	 <!-- ////////////////////////////////////////////////// container key -->
-                <div id="containerKeys" style="display: block;">
+                <div id="containerKeys" style="display: none;">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
 <div id="noKeys" style="display: none;"><img id="noneKeyGif" src="media/errorAnimation.gif" alt=""><p id="alertNoKeys">Ups, no has registrado ninguna contraseña</p></div>
-<div id="pushContainer">
-	<div class="push">
-		<label>Commit</label>
-			<p class="commitPush">Google</p>
-		<label>contraseña</label>
-				<p class="passwordPush">4fwafsssssssssssssssssssssssssssssssssssssssf65s4f6</p>
-		<label>Fecha</label>
-				<p class="fechaPush">10/01/23</p>
-		</div>	<div class="push">
-			<label>Commit</label>
-				<p class="commitPush">Google</p>
-			<label>contraseña</label>
-					<p class="passwordPush">s</p>
-			<label>Fecha</label>
-					<p class="fechaPush">10/01/23</p>
-			</div>	<div class="push">
-				<label>Commit</label>
-					<p class="commitPush">Google</p>
-				<label>contraseña</label>
-						<p class="passwordPush">4fwafsdfsfsfdsff65s4f6</p>
-				<label>Fecha</label>
-						<p class="fechaPush">10/01/23</p>
-				</div>	<div class="push">
-					<label>Commit</label>
-						<p class="commitPush">Google</p>
-					<label>contraseña</label>
-							<p class="passwordPush">dddddd</p>
-					<label>Fecha</label>
-							<p class="fechaPush">10/01/23</p>
-					</div>	<div class="push">
-						<label>Commit</label>
-							<p class="commitPush">Google</p>
-						<label>contraseña</label>
-								<p class="passwordPush">4fwaff65s4f6</p>
-						<label>Fecha</label>
-								<p class="fechaPush">10/01/23</p>
-						</div>	<div class="push">
-							<label>Commit</label>
-								<p class="commitPush">Google</p>
-							<label>contraseña</label>
-									<p class="passwordPush">safafafa</p>
-							<label>Fecha</label>
-									<p class="fechaPush">10/01/23</p>
-							</div>	<div class="push">
-								<label>Commit</label>
-									<p class="commitPush">Google</p>
-								<label>contraseña</label>
-										<p class="passwordPush">gsgsgsdgsdg</p>
-								<label>Fecha</label>
-										<p class="fechaPush">10/01/23</p>
-								</div>	<div class="push">
-									<label>Commit</label>
-										<p class="commitPush">Google</p>
-									<label>contraseña</label>
-											<p class="passwordPush">afaffasfewfewfwe</p>
-									<label>Fecha</label>
-											<p class="fechaPush">10/01/23</p>
-									</div>	<div class="push">
-										<label>Commit</label>
-											<p class="commitPush">Google</p>
-										<label>contraseña</label>
-												<p class="passwordPush">afasfeew</p>
-										<label>Fecha</label>
-												<p class="fechaPush">10/01/23</p>
-										</div>
-</div>
+<div id="pushContainer"></div>
 				</div>
 	<!-- /////////////////////////////  container save key -->
 	<div id="containerSave" style="display: none;">
@@ -129,8 +64,8 @@
    <input  type="text" placeholder="Password" id="PasswordOfSave">
    <input  type="text" placeholder="Commit" id="commitOfSave">
 </div>
-<button id="saveCancel"  class="buttonsOfPromtsSave">Cancelar</button>
 <button id="saveConfirm" class="buttonsOfPromtsSave">Guardar</button>
+<button id="saveCancel"  class="buttonsOfPromtsSave">Cancelar</button>
 
 	</div>
 	</div>
