Mejoras en el container keys

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 		   	     
 	  <div class="contentFor" id="contentGenrator" >
+	<p id="creator">Dcode</p>
 		<div id="sobrePoner" style="display: none;"></div>
 	<button id="buttonMenuKey"><img src="media/icons/passwordKey.png" alt=""></button>
 
 	  	<div class="config" id="configID">  
 	  		   <p style="text-align: center; margin-bottom: 10px;">Configuracion</p>
 	
-	  		<input autocomplete="off" type="checkbox" id="checkboxMayusculas" name="">
+	  		<input autocomplete="off" type="checkbox" id="checkboxMayusculas" name="" checked="true">
 	  		<label id="mayusculasP">Mayusculas</label>
 	  		    <br>
 	  		     <input autocomplete="off" type="checkbox"  id="checkboxMinusculas" name="">
@@ -46,7 +47,7 @@
 	 <div class="contentGenratorValue" id="contentValue">
 	 	<p id="pAlert" style=" width: auto;">Hola, Primero has la configuracion despues aplica los cambios</p>
 	 	   <input type="hidden" value="" placeholder="Ingresa el texto que desea incluir">
-<div class="containerOfButton"><button class="buttons" id="buttonCopiar" style="display: none;">copiar  <i class="fa-sharp fa-solid fa-copy"></i></button><p id="pCopiar"></p>
+<div class="containerOfButton" id="prompButtons" style="opacity: 0.3;"><button class="buttons" id="buttonCopiar" style="display: none;">copiar  <i class="fa-sharp fa-solid fa-copy"></i></button><p id="pCopiar"></p>
 	<button class="buttons" id="guardar">Guardar <i class="fa-solid fa-file-arrow-up"></i></button>
 	<button class="buttons" id="regenerar">Regenerar <i class="fa-solid fa-rotate"></i></i></button></div>
 	 	   <div id="itemPassword" style="display: none;"><p id="resultado" spellcheck="false" contenteditable="true"></p></div>
