Arreglo de bug en container key

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="containerOfButton" id="prompButtons" style="opacity: 0.3;"><button class="buttons" id="buttonCopiar" style="display: none;">copiar  <i class="fa-sharp fa-solid fa-copy"></i></button><p id="pCopiar"></p>
 	<button class="buttons" id="guardar">Guardar <i class="fa-solid fa-file-arrow-up"></i></button>
 	<button class="buttons" id="regenerar">Regenerar <i class="fa-solid fa-rotate"></i></i></button></div>
-	 	   <div id="itemPassword" style="display: none;"><p id="resultado" spellcheck="false" contenteditable="true"></p></div>
+	 	   <div id="itemPassword" style="display: none;"><p id="resultado" spellcheck="false"></p></div>
 	 </div>
 
 	 <!-- ////////////////////////////////////////////////// container key -->
