Arreglo de bug en container key

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	 </div>
 
 	 <!-- ////////////////////////////////////////////////// container key -->
-                <div id="containerKeys" style="display: none;">
+                <div id="containerKeys" style="display: none;" class="two">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
 <div id="noKeys" style="display: none;"><img id="noneKeyGif" src="media/errorAnimation.gif" alt=""><p id="alertNoKeys">Ups, no has registrado ninguna contraseña</p></div>
 <div id="pushContainer"></div>
