--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 	 </div>
 
 	 <!-- ////////////////////////////////////////////////// container key -->
+	 <div id="containerView" style="display: none;">
+		<p id="passwordView">dowkdekpdwpedopwd</p>
+				  <div class="prompts">   <button class="buttons" id="copiarView">copiar <i class="fa-solid fa-copy"></i></button><button class="buttons" id="borrarView">Borrar <i class="fa-solid fa-trash"></i></button><button  class="buttons" id="editView">Editar <i class="fa-solid fa-pen"></i></button></div>
+  </div>
                 <div id="containerKeys" style="display: none;" class="two">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
 <div id="noKeys" style="display: none;"><img id="noneKeyGif" src="media/errorAnimation.gif" alt=""><p id="alertNoKeys">Ups, no has registrado ninguna contraseña</p></div>
