--- a/index.html
+++ b/index.html
@@ -61,8 +61,15 @@
                 <div id="containerKeys" style="display: none;" class="two">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
 <div id="noKeys" style="display: none;"><img id="noneKeyGif" src="media/errorAnimation.gif" alt=""><p id="alertNoKeys">Ups, no has registrado ninguna contraseña</p></div>
+<div id="navOfSearchKey">
+<div class="containerInputSearch">
+	<input type="text" placeholder="Buscar" id="searchInput"> <button id="searchKey"><i class="fa-solid fa-magnifying-glass"></i></button>
+</div>
+</div>
+<div class="containerPush">
 <div id="pushContainer"></div>
-				</div>
+</div>
+</div>
 	<!-- /////////////////////////////  container save key -->
 	<div id="containerSave" style="display: none;">
 <div class="containerInputsSave">
