Validor de input commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		   	     
 	  <div class="contentFor" id="contentGenrator" >
 	<p id="creator">Dcode</p>
-		<div id="sobrePoner" style="display: block;"></div>
+		<div id="sobrePoner" style="display: none;"></div>
 	<button id="buttonMenuKey"><img src="media/icons/passwordKey.png" alt=""></button>
 
 	  	<div class="config" id="configID">  
@@ -74,7 +74,7 @@
 	<div id="alertCommit" style="display: none;">
 	<div style="text-align: center;" id="commentALERT">	Ups, ese Comentario ya Existe</div> <i style="margin: 5px; " class="fa-solid fa-circle-exclamation"></i>
 	</div>
-	<div id="containerSave" style="display: block;">
+	<div id="containerSave" style="display: none;">
 		
 <div class="containerInputsSave">
    <input  type="text" placeholder="Password" id="PasswordOfSave">
