Validor de input commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		   	     
 	  <div class="contentFor" id="contentGenrator" >
-	<p id="creator">Dcode</p>
+	<p id="creator">Dcode | 1.5</p>
 		<div id="sobrePoner" style="display: none;"></div>
 	<button id="buttonMenuKey"><img src="media/icons/passwordKey.png" alt=""></button>
 
