--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 	    <label style="margin-top:30px; display: block;">Caracteres : <b id="rangeP">0</b></label>
 	    <input type="range" min="4" max="64" id="rangeInput" autocomplete="off" value="0" style="width:50%;" name="">
 	    <br>
+	<div id="passwordSecurity">
+	 <div id="rangeSecurity"></div> <div id="commentSegurity">Encerio? hasta mi abuela te puede crakear</div>
+	</div>
 	    <button class="buttonGuardar" id="aplicarCambios">Aplicar</button>
 <br><br>
 	 </div>
