--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 		   	     
 	  <div class="contentFor" id="contentGenrator" >
-	<p id="creator">Dcode | 1.5</p>
+	<p id="creator">Dcode</p>
+	<a href="" class="pageInfo">Donde se guardan mis contraseñas <i class="fa-solid fa-shield-halved"></i></a>
 		<div id="sobrePoner" style="display: none;"></div>
 	<button id="buttonMenuKey"><img src="media/icons/passwordKey.png" alt=""></button>
 
@@ -44,7 +45,7 @@
 	<div id="passwordSecurity">
 	 <div id="rangeSecurity"></div> <div id="commentSegurity">Encerio? hasta mi abuela te puede crakear</div>
 	</div>
-	    <button class="buttonGuardar" id="aplicarCambios">Aplicar</button>
+	    <button class="buttonGuardar" id="aplicarCambios" style="display: none;">Aplicar</button>
 <br><br>
 	 </div>
 
@@ -59,7 +60,7 @@
 
 	 <!-- ////////////////////////////////////////////////// container key -->
 	 <div id="containerView" style="display: none;">
-		<p id="passwordView">dowkdekpdwpedopwd</p><div class="prompts"><button class="buttons" id="copiarView">copiar <i class="fa-solid fa-copy"></i></button><button class="buttons" id="borrarView">Borrar <i class="fa-solid fa-trash"></i></button><button  class="buttons" id="editView">Editar <i class="fa-solid fa-pen"></i></button><button class="buttons" id="exitContainerView"> <i class="fa-solid fa-arrow-right-from-bracket"></i></button></div>
+		<textarea id="passwordView" disabled></textarea><div class="prompts"><button class="buttons" id="copiarView">copiar <i class="fa-solid fa-copy"></i></button><button class="buttons" id="borrarView">Borrar <i class="fa-solid fa-trash"></i></button><button  class="buttons" id="editView">Editar <i class="fa-solid fa-pen"></i></button><button class="buttons" id="exitContainerView"> <i class="fa-solid fa-arrow-right-from-bracket"></i></button></div>
   </div>
                 <div id="containerKeys" style="display: none;" class="two">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
