Verificador de compatibilidad de indexedDB

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	 <!-- ////////////////////////////////////////////////// container key -->
 	 <div id="containerView" style="display: none;">
-		<textarea id="passwordView" disabled></textarea><div class="prompts"><button class="buttons" id="copiarView">copiar <i class="fa-solid fa-copy"></i></button><button class="buttons" id="borrarView">Borrar <i class="fa-solid fa-trash"></i></button><button  class="buttons" id="editView">Editar <i class="fa-solid fa-pen"></i></button><button class="buttons" id="exitContainerView"> <i class="fa-solid fa-arrow-right-from-bracket"></i></button></div>
+		<p id="passwordView"></p><div class="prompts"><button class="buttons" id="copiarView">copiar <i class="fa-solid fa-copy"></i></button><button class="buttons" id="borrarView">Borrar <i class="fa-solid fa-trash"></i></button><button  class="buttons" id="editView">Editar <i class="fa-solid fa-pen"></i></button><button class="buttons" id="exitContainerView"> <i class="fa-solid fa-arrow-right-from-bracket"></i></button></div>
   </div>
                 <div id="containerKeys" style="display: none;" class="two">
 <button id="closeContainerKey"> <img src="media/icons/close.png" alt=""></button>
