Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" href="media/icono.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<audio id="errorSound" src="media/Cancelar invitacion.mp3" style="display: none;"></audio>
-	<title>D/Passwords</title>
+	<title>My Passwords</title>
 </head>
 <body>
 		   <div class="Contenedor">
